# inc_someip_gateway

./: .bazelrc  .clang-format  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  external  pyproject.toml  python_requirements_lock.txt  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test_host.yml
bazel_stubs/rust_qnx8_toolchain/: MODULE.bazel
com_api_gen/: Cargo.toml  build.rs
com_api_gen/src/: lib.rs  prelude.rs
com_api_gen/src/iceoryx/: interface.rs  interface.types  mod.rs
deployment/: BUILD.bazel  defs.bzl
doc/: design.md  e2e.md  pitch.md
docs/: conf.py  index.rst
docs/architecture/: dec_someipgw_registration.rst  index.rst  score-someip-car-window-overview.drawio
examples/: Cargo.toml  poc_ui.rs  poc_window_steering.rs
examples/car_window_sim/: BUILD.bazel  README.md
examples/car_window_sim/config/: mw_com_config.json
examples/car_window_sim/src/: car_window.rs  car_window_controller.rs  car_window_types.cpp  car_window_types.h  car_window_types.rs  car_window_types_ipc_gen.cpp
gateway/: Cargo.toml
gateway/src/: main.rs
gateway_common/: Cargo.toml
gateway_common/src/: e2e.rs  e2e_no_protection.rs  lib.rs  someip_abstraction.rs
gateway_generated/: Cargo.toml
gateway_generated/src/: lib.rs
gateway_someip_adapters/: Cargo.toml
gateway_someip_adapters/src/: lib.rs
gateway_someip_adapters/src/covesa/: mod.rs  remote_someip_covesa_adapter.rs
main/: genindex.html  needs.json  objects.inv  search.html  searchindex.js
main/architecture/: dec_someipgw_registration.html  index.html
scripts/: generate_pitch.sh  run_mvp.sh
src/gatewayd/: BUILD.bazel  local_service_instance.cpp  local_service_instance.h  main.cpp  remote_service_instance.cpp  remote_service_instance.h
src/gatewayd/etc/: gatewayd_config.fbs  gatewayd_config.json  mw_com_config.json
src/network_service/: BUILD.bazel
src/network_service/interfaces/: message_transfer.h
src/someipd/: BUILD.bazel  main.cpp
src/someipd/etc/: mw_com_config.json
tests/cpp/: BUILD.bazel  test_main.cpp
tests/integration/: BUILD.bazel  client.py  conftest.py  test_dummy.py  vsomeip-local.json  vsomeip.json
tests/integration/docker_setup/: Dockerfile  docker-compose.yaml  entrypoint-master  entrypoint-slave  readme.md
tests/integration/sample_client/: BUILD.bazel  sample_client.cpp  vsomeip.json
tests/performance_benchmarks/: BUILD.bazel  PERFORMANCE_ANALYSIS_DRAFT.md  echo_server.cpp  echo_service.h  ipc_benchmarks.cpp
tests/performance_benchmarks/config/: benchmark_mw_com_config.json
