# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "someip-gateway"
version = "0.0.0"
requires-python = ">= 3.10"
# This project is not meant for consumption from other packages
classifiers = ["Private :: Do Not Upload"]

# Run `bazel run //:python_requirements.update` to update python_requirements_lock.txt
dependencies = ["pytest~=8.0", "someip~=0.3.0"]

[tool.basedpyright]
extends = "bazel-bin/ide_support.runfiles/score_tooling+/python_basics/pyproject.toml"
verboseOutput = true
exclude = ["**/__pycache__", "**/.*", "**/bazel-*"]
