[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
iceoryx2.workspace = true
iceoryx2-bb-container.workspace = true
com-api.workspace = true
com_api_gen.workspace = true
gateway_generated.workspace = true
gateway_someip_adapters.workspace = true
async_runtime.workspace = true
foundation.workspace = true
logging_tracing.workspace = true
gateway_common.workspace = true