"""Stub module for rust_qnx8_toolchain.

This is a minimal stub to satisfy the dependency declared by score_toolchains_rust.
QNX support is not needed for S-CORE SOME/IP Gateway (Linux targets only).
"""

module(
    name = "rust_qnx8_toolchain",
    version = "1.0.0",
)

# No dependencies or content - this is a pure stub to satisfy module resolution.
