# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This daemon is a gateway between the SCORE middleware and the SOME/IP communication stack.
"""

load("@flatbuffers//:build_defs.bzl", "flatbuffer_cc_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@score_communication//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")

cc_binary(
    name = "gatewayd",
    srcs = ["main.cpp"],
    args = [
        "-service_instance_manifest",
        "$(rootpath etc/mw_com_config.json)",
    ],
    data = [
        "etc/mw_com_config.json",
        ":config_file",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":config_flatbuffers",
        ":local_service_instance",
        ":remote_service_instance",
        "//src/network_service:consumer",
        "@score_communication//score/mw/com",
    ],
)

cc_library(
    name = "local_service_instance",
    srcs = ["local_service_instance.cpp"],
    hdrs = ["local_service_instance.h"],
    deps = [
        ":config_flatbuffers",
        "//src/network_service:consumer",
        "@score_communication//score/mw/com",
    ],
)

cc_library(
    name = "remote_service_instance",
    srcs = ["remote_service_instance.cpp"],
    hdrs = ["remote_service_instance.h"],
    deps = [
        ":config_flatbuffers",
        "//src/network_service:consumer",
        "//tests/performance_benchmarks:echo_service",
        "@score_communication//score/mw/com",
    ],
)

flatbuffer_cc_library(
    name = "config_flatbuffers",
    srcs = ["etc/gatewayd_config.fbs"],
)

genrule(
    name = "config_file",
    srcs = [
        "etc/gatewayd_config.fbs",
        "etc/gatewayd_config.json",
    ],
    outs = ["etc/gatewayd_config.bin"],
    cmd = """
    $(location @flatbuffers//:flatc) --binary -o $(RULEDIR)/etc/ $(SRCS)
    """,
    message = "Generating gatewayd_config binary",
    tools = ["@flatbuffers//:flatc"],
)

validate_json_schema_test(
    name = "mw_com_config_schema_valid",
    size = "small",
    json = "etc/mw_com_config.json",
    schema = "@score_communication//score/mw/com:config_schema",
    tags = ["lint"],
)
