# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""
This library implements the network service for SOME/IP communication.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "interfaces/message_transfer",
    hdrs = [
        "interfaces/message_transfer.h",
    ],
    deps = [
        "@score_communication//score/mw/com",
    ],
)

cc_library(
    name = "provider",
    srcs = [],
    hdrs = [],
    visibility = ["//visibility:public"],
    deps = [
        ":interfaces/message_transfer",
    ],
)

cc_library(
    name = "consumer",
    srcs = [],
    hdrs = [],
    visibility = ["//visibility:public"],
    deps = [
        ":interfaces/message_transfer",
    ],
)
