# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@score_communication//bazel/tools:json_schema_validator.bzl", "validate_json_schema_test")

cc_library(
    name = "echo_service",
    hdrs = ["echo_service.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@score_communication//score/mw/com",
    ],
)

cc_binary(
    name = "echo_server",
    srcs = ["echo_server.cpp"],
    args = [
        "-service_instance_manifest",
        "$(rootpath config/benchmark_mw_com_config.json)",
    ],
    data = ["config/benchmark_mw_com_config.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":echo_service",
        "@score_baselibs//score/language/futurecpp",
        "@score_communication//score/mw/com",
    ],
)

cc_binary(
    name = "ipc_benchmarks",
    srcs = ["ipc_benchmarks.cpp"],
    data = ["config/benchmark_mw_com_config.json"],
    visibility = ["//visibility:public"],
    deps = [
        ":echo_service",
        "@google_benchmark//:benchmark",
        "@score_baselibs//score/language/futurecpp",
        "@score_communication//score/mw/com",
    ],
)

validate_json_schema_test(
    name = "benchmark_mw_com_config_schema_valid",
    size = "small",
    json = "config/benchmark_mw_com_config.json",
    schema = "@score_communication//score/mw/com:config_schema",
    tags = ["lint"],
)
